syntax = "proto3";

package Protocol;

option csharp_namespace = "Google.Protobuf.Enum";

enum CreatureState{
	Idle = 0;
	Move = 1;
	Skill = 2;
	Dead = 3;
}

enum MoveDir{
	Up = 0;
	Down = 1;
	Left = 2;
	Right = 3;
}

enum ErrorType{
    Success = 0;
    Fail = 1;
}